# Dog-Shelter

./: README.md
project files/: AdministratorGUI.cpp  AdministratorGUI.h  AdoptionList.cpp  AdoptionList.h  CMakeLists.txt  CSV_AdoptionList.cpp  CSV_AdoptionList.h  Dog.cpp  Dog.h  DogValidator.cpp  DogValidator.h  FileAdoptionList.cpp  FileAdoptionList.h  HTML_AdoptionList.cpp  HTML_AdoptionList.h  RepositoryExceptions.cpp  RepositoryExceptions.h  SelectModeGUI.cpp  SelectModeGUI.h  SelectModeGUI.ui  Services.cpp  Services.h  TextFileRepository.cpp  TextFileRepository.h  UML Diagram.mdj  UserModeGUI.cpp  UserModeGUI.h  UserModeGUI.ui  adoptionList.csv  adoptionList.html  assemble the application.cpp  listOfDogs.txt
